Enable hot reload in Docker container using nodemon and volumes - Added nodemon.json config with legacyWatch for Docker compatibility - Updated Dockerfile for development with nodemon, ts-node, tsconfig-paths - Mounted local source code into container using Docker volumes - Fixed native bcrypt issue by reinstalling dependencies inside container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,9 @@ services:
     ports:
       - "3001:3001"
     restart: always
+    volumes:
+      - ./backend/auth-service:/app
+      - /app/node_modules
 
 volumes:
   mongo_data:
