feat: implement initial file-service with upload, MongoDB metadata, JWT guard, and healthcheck
- Initialized file-service using NestJS
- Connected to shared MongoDB (cloud_storage)
- Added file upload with Multer and local disk storage
- Created File schema with metadata (original name, mime type, ownerId, etc.)
- Implemented JWT AuthGuard for protected routes
- Added /files/upload route (POST)
- Added /files/health route for health monitoring
- Integrated file-service into docker-compose with Dockerfile.dev
- Mounted uploads/ directory as volume
- Configured healthcheck in docker-compose for file-service
- Used ConfigService to load PORT and MONGO_URI from .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,5 +42,28 @@ services:
       - ./backend/user-service:/app
       - /app/node_modules
 
+    file-service:
+      build:
+        context: ./backend/file-service
+        dockerfile: Dockerfile.dev
+      image: cloud-storage-app-file-service:v1.1.0
+      container_name: file-service
+      depends_on:
+        - mongo
+      env_file:
+        - ./backend/file-service/.env
+      ports:
+        - '3003:3003'
+      restart: always
+      volumes:
+        - ./backend/file-service:/app
+        - /app/node_modules
+        - ./backend/file-service/uploads:/app/uploads
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:3003/files/health"]
+        interval: 10s
+        timeout: 5s
+        retries: 3
+
 volumes:
   mongo_data:
