--- a/backend/file-service/package.json
+++ b/backend/file-service/package.json
@@ -25,12 +25,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.4.15",
+    "archiver": "^7.0.1",
     "busboy": "^1.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
+    "nanoid": "^3.3.11",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.1.0"
