--- a/backend/file-service/package.json
+++ b/backend/file-service/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/schedule": "^5.0.1",
     "archiver": "^7.0.1",
     "busboy": "^1.6.0",
     "class-transformer": "^0.5.1",
