✅ Fully configured development environment using Docker
- Added Dockerfile and docker-compose support for frontend
- Mounted volumes for live code updates and node_modules isolation
- Installed dependencies inside container
- Configured Vite + Tailwind + React to work inside Docker
- Enabled hot-reload for frontend development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,5 +84,21 @@ services:
       - ./backend/api-gateway:/app
       - /app/node_modules
 
+  front:
+    build:
+      context: ./front
+      dockerfile: Dockerfile.dev
+    container_name: front
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./front:/app
+      - /app/node_modules
+    restart: always
+    environment:
+      - ROLLUP_USE_NATIVE=false
+    command: npm run dev
+
+
 volumes:
   mongo_data:
