✅ Tailwind CSS integrated following official Vite documentation
- Configured Vite + Tailwind + React to work inside Docker
- Enabled hot-reload for frontend development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
     build:
       context: ./backend/api-gateway
       dockerfile: Dockerfile.dev
-    image: cloud-storage-app-api-gateway:v1.0.0
+    image: cloud-storage-app-api-gateway:v1.1.0
     container_name: api-gateway
     depends_on:
       - auth-service
@@ -88,7 +88,12 @@ services:
     build:
       context: ./front
       dockerfile: Dockerfile.dev
-    container_name: front
+    image: cloud-storage-app-frontend:v1.1.0
+    container_name: frontend
+    depends_on:
+      - api-gateway
+    env_file:
+      - ./front/.env
     ports:
       - "5173:5173"
     volumes:
