--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "daisyui": "^5.0.19",
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
