transfered to Linux dev env

--- a/backend/file-service/Dockerfile.dev
+++ b/backend/file-service/Dockerfile.dev
@@ -1,4 +1,22 @@
+# FROM node:18-alpine
+
+# WORKDIR /app
+
+# COPY package*.json ./
+# RUN npm install
+
+# RUN npm install -g ts-node tsconfig-paths nodemon
+
+# COPY . .
+
+# ENV PORT=3003
+# ENV NODE_ENV=development
+
+# CMD ["npm", "run", "start:dev"]
+
 FROM node:18-alpine
+
+RUN apk add --no-cache curl
 
 WORKDIR /app
 
